# ralex

./: .env  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  .ralex_tasks.json  ADVANCED_SECURITY_SANDBOXING_PLAN.md  AGENTOS_INTEGRATION_PLAN.md  AGENTOS_RALEX_INTEGRATION.md  AGENT_OS_INTEGRATION.md  AGENT_OS_SESSION_LIFECYCLE_ROADMAP.md  AGENT_OS_TODO_WRITE_INTEGRATION.md  ARCHITECTURE.md  ARCHITECTURE_V2_RECOMMENDATION.md  AUTOMATED_TESTING_QA_PLAN.md  BLOAT_ANALYSIS.md  CCR_QUICKSTART.md  CI_CD_SETUP_SUMMARY.md  CLAUDE.md  CLAUDE_CODE_SETUP.md  COMPLETION_STATUS.md  COMPREHENSIVE_HANDOVER.md  COMPREHENSIVE_PLANNING_SUMMARY.md  CONTRIBUTING.md  CORE_PHILOSOPHY_VALIDATION.md  DOCKER_DEPLOYMENT_INFRASTRUCTURE_PLAN.md  DOCUMENTATION_REALITY_CHECK.md  DOCUMENTATION_UPDATES_SUMMARY.md  FREE_MODE_IMPLEMENTATION_PLAN.md  FRONTLOADING_EXECUTION_APPROVALS_INVESTIGATION.md  GEMINI.md  GEMINI_MCP_INTEGRATION_ANALYSIS.md  HANDOFF.md  HANDOVER_FINAL.md  HANDOVER_STATUS.md  IMPLEMENTATION_STATUS.md  INSTALL.md  INSTALLATION_TEST.md  LITELLM_AGENTOS_ALTERNATIVES_RESEARCH.md  LITELLM_BUDGET_SETUP.md  (+137 more)
.agent-os/: README.md
.ai-logs/: content-1651f4b2-0001.json  content-2194df9c-0001.json  content-55614573-0001.json  content-6d3803aa-0001.json  content-7a194171-0001.json  content-8f0f57ff-0001.json  content-a41fec73-0001.json  content-aad92268-0001.json  content-b593341c-0001.json  content-cbb2086d-0001.json  content-e24b47ea-0001.json  content-f47ea9fb-0001.json  content-fa6f66aa-0001.json  content-fd033ca2-0001.json
.claude/: mcp_config.json
.k83/: README.md  config.yaml  k83-mcp-server.py
.khamel83/: budget-controller.py  budget-management.md  complexity_analyzer.py  context-optimization-guide.md  context_manager.py  cost_estimation_engine.py  litellm_router.py  opencode_wrapper.py  pattern_recognition.py  ralex-architecture.md  task-queue.md  task_classifier.py
.ralex/: budget_log.json  comprehensive_assessment_2025-07-27_17-14-46.json  cost_log.txt  intelligence-config.yaml  mobile_test_results_2025-07-27_17-14-46.json  mobile_test_results_2025-07-27_17-39-17.json  philosophy-testing-config.yaml  philosophy_test_results_2025-07-27_17-14-46.json  session_2025-07-25_16-14-17.md  session_2025-07-25_16-15-35.md  session_2025-07-26_11-45-39.md  session_2025-07-26_11-46-48.md  session_2025-07-26_11-47-47.md  session_2025-07-26_12-50-18.md  session_2025-07-26_12-51-35.md  session_2025-07-26_12-52-10.md  session_2025-07-26_12-52-30.md  session_2025-07-26_12-53-16.md  session_2025-07-26_12-53-50.md  session_2025-07-26_12-54-23.md  session_2025-07-26_12-54-47.md  session_2025-07-26_13-32-11.md  session_2025-07-26_14-14-06.md  session_2025-07-26_22-27-07.md  session_2025-07-26_22-27-30.md  session_2025-07-26_22-33-34.md  session_2025-07-26_22-39-52.md  session_2025-07-26_22-40-08.md  session_2025-07-26_22-49-30.md  session_2025-07-26_23-01-07.md  session_2025-07-26_23-01-17.md  session_2025-07-27_13-22-42.md  session_2025-07-27_15-10-14.md  session_2025-07-27_16-08-43.md  session_2025-07-27_16-10-56.md  session_2025-07-27_16-13-51.md  session_2025-07-27_16-30-24.md  session_2025-07-27_17-14-39.md  session_2025-07-27_17-14-44.md  session_2025-07-27_17-14-46.md  (+3 more)
.ralex-env/: pyvenv.cfg
.venv-v2/: pyvenv.cfg
Old Ralex/: LICENSE  comparison_prompt.txt  package-lock.json  package.json  qwen_14b_response.txt  ralex-wrapper.exp
agent_os/: daily_briefing_generator.py  project_info.json  project_status_assessment.py  session_manager.py
archive/: AGENT_OS.md  CNAME  CONTRIBUTING.md  HISTORY.md  MANIFEST.in  PORTABILITY-AND-MVP-ANALYSIS.md  PRODUCTION-READY.md  PROJECT-EVOLUTION.md  README-ATLAS.md  README-RASPBERRY-PI.md  README.md  TESTING-CHECKLIST.md  V1_VS_V2.md  V3-PROJECT-ROADMAP.md  V5-COMPREHENSIVE-ROADMAP.md  V5_MCP_ANALYSIS.md  V5_ROADMAP_MCP.md  test-prompts.json  zen-test.json
atlas_core/: launcher.py
benchmark/: README.md  docker.sh  over_time.py  problem_stats.py  test_benchmark.py
comprehensive_test_20250812_205810/: basic_autopilot_1755057520.txt  basic_cheap-smart_1755057510.txt  basic_cheap-smart_1755057605.txt  basic_free-coding_1755057561.txt  basic_free-reasoning_1755057523.txt  comprehensive_results.md
config/: ccr.config.template.json  free_mode.yaml  intent_routes.json  model_tiers.json  pattern_rules.json  prompts.json  redis.conf  settings.json  workflows.yaml  zen-test-with-mcp.json
data/: semantic_embeddings.json
docs/: ARCHITECTURE.md  DEPLOYMENT.md  MOBILE_APPS.md  MOBILE_SETUP.md
ralex-integration-package/: INTEGRATION_PLAN.md  agent_os_bridge.py  integration_examples.py  methodology_engine.py  pattern_manager.py  state_manager.py
ralex-v2-minimal/: README.md  litellm_config.yaml  yolo-ralex.sh
ralex.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ralex_core/: __init__.py  _version.py  agentos_enhanced.py  agentos_enhancer.py  agentos_integration.py  agentos_v4_integration.py  agentos_web_integration.py  api.py  approval_manager.py  budget.py  budget_optimizer.py  ccr_manager.py  code_analyzer.py  code_executor.py  command_parser.py  context_continuity.py  error_handler.py  (+36 more)
(+222 files in other folders)
