
[project]
name = "ralex"
description = "Ralex: Terminal-native AI coding assistant with intelligent routing"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python",
    "Topic :: Software Development",
]
requires-python = ">=3.10,<3.13"
dynamic = ["dependencies", "version"]

[project.urls]
Homepage = "https://github.com/Khamel83/ralex"

[project.scripts]
ralex = "ralex_core.launcher:main"

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["ralex_core"]

[build-system]
requires = ["setuptools>=68", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "ralex_core/_version.py"

[tool.codespell]
skip = "*.svg,Gemfile.lock,tests/fixtures/*,ralex/website/assets/*"
write-changes = true
